Starting on WebSockets in AngularJS Fix for ignored processes

--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -24,6 +24,7 @@
     <script src="src/enforcer/app/controllers/MainController.js"></script>
     <script src="src/enforcer/dashboard/Dashboard.js"></script>
     <script src="src/enforcer/dashboard/controllers/DashboardController.js"></script>
+    <script src="src/enforcer/app/services/WebSocketService.js"></script>
 
 </head>
 <body ng-controller="MainCtrl as main">
