--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -26,6 +26,7 @@
         <script src="vendor/angular-route.js"></script>
         <script src="vendor/angular-ui-router.js"></script>
         <script src="vendor/ngDraggable.js"></script>
+        <script src="vendor/angular-resource.js"></script>
         <!-- Enforcer One -->
         <script src="src/enforcer/Enforcer.js"></script>
         <script src="src/enforcer/app/App.js"></script>
@@ -42,8 +43,8 @@
         <script src="src/enforcer/dashboard/services/SettingsService.js"></script>
         <script src="src/enforcer/app/services/WebSocketService.js"></script>
         <!-- Directives -->
-        <script src="src/enforcer/dashboard/directives/Settings.js"></script>
-        <script src="src/enforcer/dashboard/templates/settings.html"></script>
+        <!--<script src="src/enforcer/dashboard/directives/Settings.js"></script>
+        <script src="src/enforcer/dashboard/templates/settings.html"></script>-->
 
     </head>
 
