--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -48,8 +48,8 @@
 
     </head>
 
-    <body style="background: url('assets/img/concrete_seamless.png'); background-repeat: repeat;">
-
+    <!--<body style="background: url('assets/img/concrete_seamless.png'); background-repeat: repeat;">-->
+    <body>
 
     <!-- Sidebar -->
     <div ng-controller="StatusCtrl">
