DashboardCtrl.js: Now simulates process monitor reports locally and updates dashboard. ReportService.js: Creates report if processStateChange is different from previous snapshot. index.html: Added animate.css for animation library usage. dashboard.html: Generates unique report Id with each new report.

--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
         <link rel="stylesheet" href="assets/css/animations.css">
         <link rel="stylesheet" href="assets/css/menu_sideslide.css">
+        <link rel="stylesheet" href="assets/css/animate.css">
 
         <!-- Google Open Sans font -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic,800,800italic,300italic,300' rel='stylesheet' type='text/css'>
@@ -23,6 +24,7 @@
 
         <!-- Angular JS -->
         <script src="vendor/angular.js"></script>
+        <script src="vendor/angular-animate.js"></script>
         <script src="vendor/angular-route.js"></script>
         <script src="vendor/angular-ui-router.js"></script>
         <script src="vendor/ngDraggable.js"></script>
