--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -6,6 +6,7 @@
         <title>Enforcer One</title>
 
         <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="assets/css/enforcer.css">
 
         <!-- Materialize -->
         <link rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
@@ -80,6 +81,12 @@
     <div class="content-wrap">
 
         <div ui-view></div>
+        <!-- ToDo: add ng-show functionality for history drop box-->
+        <div class="report-drop valign-wrapper"  ng-drop="true" ng-drop-success="getReportHistory($data,$event)"  id="historyBox">
+            <p class="white-text" style="text-align: center;">Place Report for Change History</p>
+        </div>
+
+
 
         <!-- Settings button -->
         <div class="fixed-action-btn" style="bottom: 45px; right: 24px;" ng-controller="SettingsCtrl" id="gear-button">
@@ -88,7 +95,7 @@
             </a>
             <ul>
                 <li><a href="#modal3" class="btn-floating blue modal-trigger tooltipped" data-delay="25" data-tooltip="User Profile" data-position="left"><i class="material-icons">perm_identity</i></i></a></li>
-                <li><a href="#modal2" class="btn-floating pink modal-trigger tooltipped" data-delay="25" data-tooltip="Change Log" data-position="left"><i class="material-icons">view_list</i></a></li>
+                <li><a href="#modal2" class="btn-floating pink modal-trigger tooltipped" data-delay="25" data-tooltip="Change Log" data-position="left">{{changeLogCount}}<!--<i class="material-icons">view_list</i>--></a></li>
                 <li><a ng-click="openSettings()" class="btn-floating purple tooltipped" data-delay="25" data-tooltip="App Settings" data-position="left"><i class="material-icons">settings_applications</i></a></li>
                 <li><a id="connectionStatus" class="btn-floating red tooltipped" data-delay="25" data-tooltip="Connection: {{connection}}" data-position="left"><i class="material-icons">settings_ethernet</i></a></li>
             </ul>
@@ -179,6 +186,17 @@
             <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</a>
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Ok</a>
         </div>
+    </div>
+
+    <!-- Single Report Audit History -->
+    <div id="modal4" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4 class="grey-text text-darken-1">Report History</h4>
+        </div>
+        <div class="model-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-blue btn-flat">Ok</a>
+        </div>
+
     </div>
 
 
