--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -40,6 +40,7 @@
         <script src="src/enforcer/dashboard/controllers/DashboardCtrl.js"></script>
         <script src="src/enforcer/dashboard/controllers/StatusCtrl.js"></script>
         <script src="src/enforcer/dashboard/controllers/SettingsCtrl.js"></script>
+        <script src="src/enforcer/dashboard/controllers/MetricCtrl.js"></script>
         <!-- Services -->
         <script src="src/enforcer/dashboard/services/AuditService.js"></script>
         <script src="src/enforcer/dashboard/services/ReportService.js"></script>
@@ -67,8 +68,10 @@
                         <i class="material-icons" style="float:left">verified_user</i><span>{{status.host}}</span>
                     </a>
                 </div>
+                <a class="waves-effect waves-light btn-flat purple white-text" style="position:absolute; top:90%;" ng-click="openMetric()">Monitor Metrics</a>
             </nav>
             <button class="close-button" id="close-button">Close Menu</button>
+
         </div>
 
         <div class="row">
@@ -181,6 +184,36 @@
         <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</a>
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Ok</a>
+        </div>
+    </div>
+
+    <!-- Metric Modal - used for configuring Vader request -->
+    <div id="modal5" ng-controller="MetricCtrl" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4 class="grey-text text-darken-1">Specify Metric to Monitor</h4>
+            <!--<form name="requestMetric" action="" method="post">-->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="metricURL" type="text" ng-model="data.url">
+                        <label for="metricURL">Metric Path</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s4">
+                        <input id="threshold" type="number" step="0.01" ng-model="data.threshold">
+                        <label for="threshold">Threshold</label>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                </div>
+        </div>
+        <div class="modal-footer">
+            <div class="row">
+                <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat green white-text col s2" ng-click="prepareMetricRequest()">Ok</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat red white-text col s2">Cancel</a>
+            </div>
         </div>
     </div>
 
