--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -45,7 +45,9 @@
         <script src="src/enforcer/dashboard/services/AuditService.js"></script>
         <script src="src/enforcer/dashboard/services/ReportService.js"></script>
         <script src="src/enforcer/dashboard/services/SettingsService.js"></script>
+        <script src="src/enforcer/dashboard/services/MetricService.js"></script>
         <script src="src/enforcer/app/services/WebSocketService.js"></script>
+
         <!-- Directives -->
         <!--<script src="src/enforcer/dashboard/directives/Settings.js"></script>
         <script src="src/enforcer/dashboard/templates/settings.html"></script>-->
@@ -66,6 +68,10 @@
                     <a><span style="margin-left:0px; font-size:1.05em">Monitored Hosts</span></a>
                     <a class="tooltipped green-text" ng-mouseover="calculateTimeDiff(status)" data-position="right" data-delay="25" data-tooltip="Last Heartbeat: {{timeDiff}}s" ng-repeat="status in statuses" id="text-{{status.xwingId}}">
                         <i class="material-icons" style="float:left">verified_user</i><span>{{status.host}}</span>
+                    </a>
+                    <a><span style="margin-left:0px; font-size:1.05em">Monitored Metrics</span></a>
+                    <a class="tooltiped green-text" ng-mouseover="CalculateTimeDiff(metric)" data-position="right" data-delay="25" data-tooltip="Last Heartbeat: {{timeDiff}}s" ng-repeat="metric in monitoredMetricRequests" id="text-{{metric.url}}">
+                        <i class="material-icons" style="float:left">verified_user</i><span>{{metric.metricDetail}}</span>
                     </a>
                 </div>
                 <a class="waves-effect waves-light btn-flat purple white-text" style="position:absolute; top:90%;" ng-click="openMetric()">Monitor Metrics</a>
@@ -194,13 +200,19 @@
             <!--<form name="requestMetric" action="" method="post">-->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="metricURL" type="text" ng-model="data.url">
+                        <input id="metricURL" type="text" ng-model="metricRequest.url">
                         <label for="metricURL">Metric Path</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s4">
-                        <input id="threshold" type="number" step="0.01" ng-model="data.threshold">
+                        <input id="metricDetail" type="text" step="0.01" ng-model="metricRequest.metricDetail">
+                        <label for="threshold">Metric Detail</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s4">
+                        <input id="threshold" type="number" step="0.01" ng-model="metricRequest.threshold">
                         <label for="threshold">Threshold</label>
                     </div>
                 </div>
@@ -210,10 +222,8 @@
                 </div>
         </div>
         <div class="modal-footer">
-            <div class="row">
-                <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat green white-text col s2" ng-click="prepareMetricRequest()">Ok</a>
-                <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat red white-text col s2">Cancel</a>
-            </div>
+            <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat col s2" ng-click="prepareMetricRequest()">Ok</a>
+            <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat col s2">Cancel</a>
         </div>
     </div>
 
