--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -40,7 +40,6 @@
         <script src="src/enforcer/dashboard/controllers/DashboardCtrl.js"></script>
         <script src="src/enforcer/dashboard/controllers/StatusCtrl.js"></script>
         <script src="src/enforcer/dashboard/controllers/SettingsCtrl.js"></script>
-        <script src="src/enforcer/dashboard/controllers/MetricCtrl.js"></script>
         <!-- Services -->
         <script src="src/enforcer/dashboard/services/AuditService.js"></script>
         <script src="src/enforcer/dashboard/services/ReportService.js"></script>
@@ -70,20 +69,57 @@
                         <i class="material-icons" style="float:left">verified_user</i><span>{{status.host}}</span>
                     </a>
                     <a><span style="margin-left:0px; font-size:1.05em">Monitored Metrics</span></a>
-                    <a class="tooltiped green-text" ng-mouseover="CalculateTimeDiff(metric)" data-position="right" data-delay="25" data-tooltip="Last Heartbeat: {{timeDiff}}s" ng-repeat="metric in monitoredMetricRequests" id="text-{{metric.url}}">
+                    <a class="tooltiped green-text" ng-mouseover="initializeTooltip()" data-position="right" data-delay="25" data-tooltip="Click to Edit Vader" ng-click="openVaderEditor(metric)"ng-repeat="metric in monitoredMetricRequests" id="text-{{metric.url}}">
                         <i class="material-icons" style="float:left">verified_user</i><span>{{metric.metricDetail}}</span>
                     </a>
                 </div>
-                <a class="waves-effect waves-light btn-flat purple white-text" style="position:absolute; top:90%;" ng-click="openMetric()">Monitor Metrics</a>
+                <a class="waves-effect waves-light btn-flat purple white-text" style="position:absolute; top:90%;" ng-click="openMetricModal()">Monitor Metrics</a>
             </nav>
             <button class="close-button" id="close-button">Close Menu</button>
 
         </div>
 
+
+        <!-- Vader Modal: Modal for configuring Vader Requests -->
+        <div id="modal5" class="modal modal-fixed-footer">
+            <div class="modal-content">
+                <h4 class="grey-text text-darken-1">Specify Metric to Monitor</h4>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="metricURL" type="text" ng-model="metricRequest.url">
+                        <label class="active" for="metricURL">Metric Path</label>
+                    </div>
+                </div>
+                <div class="row" ng-show="!editVader">
+                    <div class="input-field col s4">
+                        <input id="metricDetail" type="text" ng-model="metricRequest.metricDetail">
+                        <label for="threshold">Metric Detail</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s4">
+                        <input id="threshold" type="number" step="0.01" ng-model="metricRequest.threshold">
+                        <label class="active" for="threshold">Threshold</label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer" ng-show="!editVader">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat col s2" ng-click="prepareMetricRequest('ADD')">Ok</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat col s2">Cancel</a>
+            </div>
+            <div class="modal-footer" ng-show="editVader">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat col s2" ng-click="prepareMetricRequest('EDIT')">Edit</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat col s2" ng-click="prepareMetricRequest('REMOVE')">Remove</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat col s2">Cancel</a>
+            </div>
+        </div>
+
+        <!-- Page Header -->
         <div class="row">
             <div class="col s1"><button class="menu-button" id="open-button">Open Menu</button></div>
             <div class="col s4 offset-s4 center-align"><h3 class="grey-text text-darken-1">Enforcer One</h3></div>
         </div>
+
     </div>
 
     <!-- Main Dashboard Content -->
@@ -194,38 +230,9 @@
     </div>
 
     <!-- Metric Modal - used for configuring Vader request -->
-    <div id="modal5" ng-controller="MetricCtrl" class="modal modal-fixed-footer">
-        <div class="modal-content">
-            <h4 class="grey-text text-darken-1">Specify Metric to Monitor</h4>
-            <!--<form name="requestMetric" action="" method="post">-->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="metricURL" type="text" ng-model="metricRequest.url">
-                        <label for="metricURL">Metric Path</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s4">
-                        <input id="metricDetail" type="text" step="0.01" ng-model="metricRequest.metricDetail">
-                        <label for="threshold">Metric Detail</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s4">
-                        <input id="threshold" type="number" step="0.01" ng-model="metricRequest.threshold">
-                        <label for="threshold">Threshold</label>
-                    </div>
-                </div>
 
-                <div class="row">
 
-                </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat col s2" ng-click="prepareMetricRequest()">Ok</a>
-            <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat col s2">Cancel</a>
-        </div>
-    </div>
+
 
 
 
