--- a/death-star/src/main/resources/client/index.html
+++ b/death-star/src/main/resources/client/index.html
@@ -52,6 +52,9 @@
         <script src="src/enforcer/dashboard/templates/settings.html"></script>-->
         <!--Factories-->
         <script src="src/enforcer/dashboard/factories/AnimationFactory.js"></script>
+        <!--Filters-->
+        <script src="src/enforcer/dashboard/filters/metricFilter.js"></script>
+        <script src="src/enforcer/dashboard/filters/cardFilter.js"></script>
 
     </head>
 
@@ -125,8 +128,132 @@
     <!-- Main Dashboard Content -->
     <div class="content-wrap">
 
-        <div ui-view></div>
+        <div class="container" ng-controller="DashboardCtrl">
+            <div ui-view ng-show="!dashboardSwitch" id="Dashboard" class="animated"></div>
+            <div ui-view="vaderDashboard" ng-show="dashboardSwitch" id="VaderDashboard" class="animated"></div>
+            <!-- Single Report Detail Modal -->
+            <div id="modal4" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <!-- Information from card laid out for easier reading -->
+                    <h4 class="grey-text text-darken-1">Card Details</h4>
+                    <div class="row valign-wrapper" ng-show="reportOrMetric">
+                        <div class="card {{detailedCard.type}} col s3">
+                            <div class="card-content">
+                                <span class="card-title"><strong>{{detailedCard.processId}} | [{{detailedCard.host}}]</strong></span>
+                                <div class="type-bar {{detailedCard.status}}"></div>
+                                <p>{{detailedCard.mainClass}}</p>
+                                <p>{{detailedCard.processStateChange}}</p>
+                                <p class="right-align">{{detailedCard.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                            </div>
+                        </div>
+                        <div class="col s9">
+                            <ul class="collection">
+                                <li class="collection-item"><span style="font-weight: bold;">Process Id - </span><span class="grey-text text-darken-1">{{detailedCard.processId}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Host - </span><span class="grey-text text-darken-1">{{detailedCard.host}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Main Class - </span><span class="grey-text text-darken-1">{{detailedCard.mainClass}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Process State - </span><span class="grey-text text-darken-1">{{detailedCard.processStateChange}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Time/Date - </span><span class="grey-text text-darken-1">{{detailedCard.timeStamp}}</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row valign-wrapper" ng-show="!reportOrMetric">
+                        <div class="card {{detailedCard.type}} col s3">
+                            <div class="card-content">
+                                <span class="card-title"><strong>{{detailedCard.metricDetail}} | [{{detailedCard.average}}]</strong></span>
+                                <div class="type-bar {{detailedCard.status}}"></div>
+                                <p>{{detailedCard.target}}</p>
+                                <p>{{detailedCard.threshold}}</p>
+                                <p class="right-align">{{detailReport.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                            </div>
+                        </div>
+                        <div class="col s9">
+                            <ul class="collection">
+                                <li class="collection-item"><span style="font-weight: bold;">Vader Label - </span><span class="grey-text text-darken-1">{{detailedCard.metricDetail}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Current Metric Size - </span><span class="grey-text text-darken-1">{{detailedCard.average}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Data Points (5min) - </span><span class="grey-text text-darken-1">{{detailedCard.datapoints}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Metric Path - </span><span class="grey-text text-darken-1">{{detailedCard.target}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Threshold - </span><span class="grey-text text-darken-1">{{detailedCard.threshold}}</span></li>
+                                <li class="collection-item"><span style="font-weight: bold;">Time/Date - </span><span class="grey-text text-darken-1">{{detailedCard.timeStamp}}</span></li>
+                            </ul>
+                        </div>
+                    </div>
 
+                    <!-- Details Input. Allows user to attach additional information, objectives, progress, etc to the report-->
+                    <h4 class="grey-text text-darken-1">Additional Information</h4>
+                    <div class="row">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">mode_edit</i>
+                                <textarea id="details_form" class="materialize-textarea" ng-model="detailReport.details">{{detailedCard.details}}</textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Unique Change Log History for dropped Report-->
+                    <h4 class="grey-text text-darken-1"> Change Log </h4>
+                    <div ng-repeat="audit in returnedAudits">
+                        <div ng-show="{{audit.update}}" class="row valign-wrapper">
+                            <div class="center-align col s2">
+                                <i class="large material-icons">account_circle</i>
+                                <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
+                            </div>
+                            <div class="card {{audit.type}} col s3" >
+                                <div class="card-content">
+                                    <span class="card-title"><strong>{{audit.header}} | [{{audit.oldHeaderDetail}}]</strong></span>
+                                    <div class="type-bar {{audit.status}}"></div>
+                                    <p>{{audit.classPath}}</p>
+                                    <p>{{audit.oldDetail}}</p>
+                                    <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                                </div>
+                            </div>
+                            <div class="col s3 center-align">
+                                <i class="large material-icons">trending_flat</i>
+                                <p style="font-weight: bold;">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                            </div>
+                            <div class="card {{audit.type}} col s3" >
+                                <div class="card-content">
+                                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                                    <div class="type-bar {{audit.status}}"></div>
+                                    <p>{{audit.classPath}}</p>
+                                    <p>{{audit.detail}}</p>
+                                    <p class="right-align">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-show="!{{audit.update}}" class="row valign-wrapper">
+                            <div class="center-align col s2">
+                                <i class="large material-icons">account_circle</i>
+                                <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
+                            </div>
+                            <div class="card {{audit.type}} col s3" >
+                                <div class="card-content">
+                                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                                    <div class="type-bar {{audit.oldStatus}}"></div>
+                                    <p>{{audit.classPath}}</p>
+                                    <p>{{audit.detail}}</p>
+                                    <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                                </div>
+                            </div>
+                            <div class="col s3 center-align">
+                                <i class="large material-icons">trending_flat</i>
+                                <p style="font-weight: bold;">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                            </div>
+                            <div class="card {{audit.type}} col s3" >
+                                <div class="card-content">
+                                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                                    <div class="type-bar {{audit.newStatus}}"></div>
+                                    <p>{{audit.classPath}}</p>
+                                    <p>{{audit.detail}}</p>
+                                    <p class="right-align">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat purple white-text" ng-click="closeDetailModal()">Ok</a>
+                </div>
+        </div>
 
 
         <!-- Settings button -->
@@ -136,6 +263,7 @@
             </a>
             <ul>
                 <li><a href="#modal3" class="btn-floating blue modal-trigger tooltipped" data-delay="25" data-tooltip="User Profile" data-position="left"><i class="material-icons">perm_identity</i></i></a></li>
+                <li><a ng-click="switchDashboards()" class="btn-floating teal tooltipped" data-delay="25" data-tooltip="Switch Dashboards" data-position="left"><i class="material-icons">swap_horiz</i></i></a></li>
                 <li><a href="#modal2" class="btn-floating pink modal-trigger tooltipped" data-delay="25" data-tooltip="Change Log" data-position="left">{{changeLogCount}}<!--<i class="material-icons">view_list</i>--></a></li>
                 <li><a ng-click="openSettings()" class="btn-floating purple tooltipped" data-delay="25" data-tooltip="App Settings" data-position="left"><i class="material-icons">settings_applications</i></a></li>
                 <li><a id="connectionStatus" class="btn-floating red tooltipped" data-delay="25" data-tooltip="Connection: {{connection}}" data-position="left"><i class="material-icons">settings_ethernet</i></a></li>
